Optix crash with Vector pass #70268

Closed
opened 2019-09-26 11:39:54 +02:00 by Serj Maiorov · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-18 21:04, hash: 741d7d60ed
Worked: (optional)

Short description of error
On a busy scene, it crashes. On a simple scene, every keyed object will behave like a Hold shader between the keys.
0001-0054.mp4
OptixBug_001.png

Exact steps for others to reproduce the error
Just add an object, create keyframes for movement, and enable Vector pass.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-18 21:04, hash: `741d7d60ed` Worked: (optional) **Short description of error** On a busy scene, it crashes. On a simple scene, every keyed object will behave like a Hold shader between the keys. [0001-0054.mp4](https://archive.blender.org/developer/F7775663/0001-0054.mp4) ![OptixBug_001.png](https://archive.blender.org/developer/F7775658/OptixBug_001.png) **Exact steps for others to reproduce the error** Just add an object, create keyframes for movement, and enable Vector pass.
Author

Added subscriber: @SerjMaiorov

Added subscriber: @SerjMaiorov

Added subscribers: @pmoursnv, @brecht

Added subscribers: @pmoursnv, @brecht
Patrick Mours was assigned by Brecht Van Lommel 2019-09-26 14:50:03 +02:00

@pmoursnv, can you look at this one?

@pmoursnv, can you look at this one?
Member

Yes, will take a look soon.

Yes, will take a look soon.

This issue was referenced by blender/cycles@ca9a84dbaa

This issue was referenced by blender/cycles@ca9a84dbaa6f145c965d2084fcc3f9d182491133

This issue was referenced by 0091b84df0

This issue was referenced by 0091b84df0281c44c98194cf94af7e894ff990e5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70268
No description provided.